[workspace]
members = ["clap-config-fallback-derive"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
rust-version = "1.94.1"
authors = ["Alexis Le Provost <alexis.leprovost@outlook.com>"]
categories = ["command-line-interface", "config"]
license = "MIT or Apache-2.0"
repository = "https://github.com/alekece/clap-config-fallback"

[package]
name = "clap-config-fallback"
description = "Add config file fallback to clap while preserving parsing, validation and error handling"
keywords = ["clap", "config", "cli"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["toml", "json", "yaml"]
derive = ["clap-config-fallback-derive"]
toml = ["figment/toml"]
json = ["figment/json"]
yaml = ["figment/yaml"]

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
clap-config-fallback-derive = { path = "clap-config-fallback-derive", version = "0.1.4", optional = true }
figment = { version = "0.10.19" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
eyre = "0.6.12"
humantime = "2.3.0"
tempfile = "3.27.0"
assert_matches = "1.5.0"
