[package]
name = "clap-config-fallback-derive"
description = "Macro implementation of #[derive(ConfigParser)]"
keywords = ["clap", "config", "cli", "derive"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["proc-macro"] }
quote = "1"
darling = "0.21"
heck = "0.5.0"
strum = { version = "0.28.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
